<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2023-2024 Maveniverse Org.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v2.0
    which accompanies this distribution, and is available at
    https://www.eclipse.org/legal/epl-v20.html

-->
<project xmlns="http://maven.apache.org/POM/4.0.0">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.maveniverse.maven.parent</groupId>
    <artifactId>parent</artifactId>
    <version>39</version>
  </parent>

  <groupId>eu.maveniverse</groupId>
  <artifactId>domtrip</artifactId>
  <version>0.1-SNAPSHOT</version>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.junit>5.9.2</version.junit>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${version.junit}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

</project>
